--- a/index.html
+++ b/index.html
@@ -171,6 +171,21 @@
                             </div>
                         </div>
                     </div>
+
+<div class="col-lg-4 col-sm-6 mb-4">
+    <div class="portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
+            <div class="portfolio-hover">
+                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+            </div>
+            <img class="img-fluid" src="assets/img/portfolio/amongus.png" alt="" />
+        </a>
+        <div class="portfolio-caption">
+            <div class="portfolio-caption-heading">Red Sus</div>
+            <div class="portfolio-caption-subheading text-muted">Red does not do tasks</div>
+        </div>
+    </div>
+</div>
                 </div>
             </div>
         </section>
@@ -534,6 +549,34 @@
                 </div>
             </div>
         </div>
+
+<div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="modal-body">
+                            <h2 class="text-uppercase">Red Sus</h2>
+                            <p class="item-intro text-muted">Red does not do tasks</p>
+                            <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/amongus.png" alt="" />
+                            <p>Red is sus I saw him vent</p>
+                            <ul class="list-inline">
+                                <li>Date: April 2021</li>
+                                <li>Category: Surveilance</li>
+                            </ul>
+                            <button class="btn btn-primary" data-dismiss="modal" type="button">
+                                <i class="fas fa-times mr-1"></i>
+                                Close Project
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
